<resources>
    <string name="app_name">Exercice2</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- Preference Titles -->
    <string name="basic_header">Basic</string>
    <string name="andvanced_header">Advanced</string>

    <string name="basic_format">Basic Format</string>
    <string name="advance_format">Advance Format</string>

    <!-- Basic Preferences -->
    <string name="size_title">Size</string>
    <string name="reply_title">Default reply action</string>
    <string name="FGcolor_title">FG Color</string>
    <string name="BGcolor_title">BG Color</string>
    <string name="Bold">Bold</string>
    <string name="Italic">Italic</string>

    <!-- Advanced Preferences -->
    <string name="alpha">Alpha</string>
    <string name="rotation">Rotation</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>