<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/basic_header">
    <ListPreference
        app:key="size"
        app:title="@string/size_title"
        app:entries="@array/size_number_list"
        app:entryValues="@array/size_number_list"
        app:defaultValue="size"
        app:useSimpleSummaryProvider="true"/>

    <ListPreference
        app:key="fgcolor_key"
        app:title="@string/FGcolor_title"
        app:entries="@array/color_entries"
        app:entryValues="@array/color_values"
        app:defaultValue="fgcolor_key"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:key="bgcolor_key"
        app:title="@string/BGcolor_title"
        app:entries="@array/color_entries"
        app:entryValues="@array/color_values"
        app:defaultValue="bgcolor_key"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:defaultValue="false"
        app:key="bold"
        app:title="@string/Bold"/>

    <SwitchPreference
        app:defaultValue="false"
        app:key="italic"
        app:title="@string/Italic"/>
    </PreferenceCategory>
</PreferenceScreen>